--- a/_sass/_publications.scss
+++ b/_sass/_publications.scss
@@ -24,19 +24,19 @@
   }
 
   h2.bibliography {
-    float: right;
     color: var(--global-divider-color);
     border: none;
     padding: 0;
-    margin: 1.5rem 0 0 1rem;
+    margin: 1.5rem 0 -1.8rem 0;
+    text-align: right;
     line-height: 1.4;
   }
 
   ol.bibliography {
     list-style: none;
     border-top: 1px solid var(--global-divider-color);
-    padding: 1rem 0 0 0;
-    margin-top: 1.5rem;
+    padding: 0.5rem 0 0 0;
+    margin-top: 0;
 
     li {
       margin-bottom: 1rem;
